properly ignore test which will not pass