@@ -4,7 +4,13 @@ import liquibase.database.DatabaseFactory;
 import liquibase.dbtest.AbstractIntegrationTest;
 import liquibase.exception.DatabaseException;
 import org.junit.Ignore;
+import org.junit.Test;
 
+/**
+ * Note, to run this in Intellij, you may need to add the following to your run configuration:
+ * <code>--add-opens=java.base/java.nio=ALL-UNNAMED</code>. See more information
+ * <a href="https://arrow.apache.org/docs/java/install.html#java-compatibility">here</a>.
+ */
 public class SnowflakeIntegrationTest extends AbstractIntegrationTest {
 
     public SnowflakeIntegrationTest() throws Exception {
@@ -13,6 +19,7 @@ public class SnowflakeIntegrationTest extends AbstractIntegrationTest {
 
     @Ignore(value = "Snowflake does not support indexes.")
     @Override
+    @Test
     public void verifyIndexIsCreatedWhenAssociatedWithPropertyIsSetAsNone() throws DatabaseException {
         super.verifyIndexIsCreatedWhenAssociatedWithPropertyIsSetAsNone();
     }
